# Robotics-Sensor-Compare

./: .gitignore  README.md  requirements.txt  setup.cfg
config/: sensor_schema.yaml
sensors/cameras/ids/: ensenso_n35.yaml
sensors/cameras/intel/: realsense_d435i.yaml
sensors/cameras/mech_mind/: mech_eye_lsr_l.yaml  mech_eye_lsr_s.yaml  mech_eye_nano.yaml  mech_eye_nano_ultra.yaml  mech_eye_pro_m.yaml  mech_eye_pro_s.yaml  mech_eye_uhp_140.yaml
sensors/cameras/stereolabs/: zed_2.yaml  zed_2i.yaml  zed_mini.yaml  zed_x.yaml
sensors/cameras/zivid/: one_plus_small.yaml
src/sensor_tool/: __init__.py  cli.py  data_loader.py  filter_sensors.py  utils.py  validate_sensors.py  visualize.py
src/sensor_tool/gui/: __init__.py  gui_helpers.py  gui_main.py  gui_widgets.py
templates/: SENSOR_TEMPLATE.yaml
tests/: spell_check.words  test_flake8.py  test_spell_check.py
tools/: add_license.py
