[metadata]
name = robotics-sensor-compare
version = 0.1.0
author = Sahil Panjwani
description = An open-source tool for comparing robotics sensors
long_description = file: README.md
long_description_content_type = text/markdown
project_urls =
    Github = https://github.com/Sahil-cmd/robotics-sensor-compare.git
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Topic :: Scientific/Engineering :: Robotics
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
python_requires = >=3.10
install_requires =
    customtkinter==5.2.2
    matplotlib==3.9.2
    numpy==2.1.3
    pillow==11.0.0
    PyYAML==6.0.2
    pandas==2.2.3
    yamale==5.2.1

packages = find:
package_dir =
    = src
include_package_data = True
zip_safe = true

[options.packages.find]
where = src

[options.extras_require]
dev =
    black>=24.0.0
    flake8>=7.1.0
    pytest>=8.3.0

[options.entry_points]
console_scripts =
    sensor-tool-cli = sensor_tool.cli:main
    sensor-tool-gui = sensor_tool.gui:main

[flake8]
max-line-length = 88
exclude = .git,__pycache__,build,dist,venv
extend-ignore = E203, W503
